# darkHUB-Video-to-Base64

./: .gitignore  CHANGELOG.md  README.md  __init__.py  _version.py  nodes.py  pyproject.toml  requirements-dev.txt
.github/workflows/: publish_action.yml  validate.yml
web/: darkhub_base64_preview.js
