[project]
name = "darkhub-video-to-base64"
version = "3.0.0"
description = "ComfyUI custom node for converting IMAGE batches into copyable PNG or MP4 Base64 strings, with optional MP4 audio muxing."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "darkHUB" }]
keywords = ["comfyui", "custom-node", "base64", "video", "image", "audio", "runninghub"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "imageio-ffmpeg>=0.6.0",
]

[project.urls]
Repository = "https://github.com/Cyber05CC/darkHUB-Video-to-Base64"

[tool.comfy]
PublisherId = "darken"
DisplayName = "darkHUB Base64"
includes = ["web"]